# fox-toolkit

./: AUTHORS  INSTALL  LICENSE  LICENSE_ADDENDUM  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  configure.in  dependencies  fox-config  fox-config.in  fox.lsm  fox.spec  fox.spec.in  mkinstalldirs
CVS/: Entries  Repository
adie/: Adie.cpp  Adie.h  Adie.stx  Adie_sample  Commands.cpp  Commands.h  FindInFiles.cpp  HelpWindow.cpp  HelpWindow.h  Hilite.cpp  Hilite.h  Makefile.am  Makefile.bc  Makefile.dmc  Makefile.icc  Makefile.in  Makefile.wc  Preferences.cpp  Preferences.h  TextWindow.cpp  TextWindow.h  help.cpp  help.h  icons.cpp  icons.h  main.cpp  parsesyntax.cpp
calculator/: Calculator.cpp  Calculator.h  HelpWindow.cpp  HelpWindow.h  Makefile.am  Makefile.bc  Makefile.dmc  Makefile.icc  Makefile.in  Makefile.wc  Preferences.cpp  Preferences.h  help.cpp  icons.cpp  icons.h  main.cpp
chart/: FXChart.cpp  FXChart.h  Makefile.am  Makefile.bc  Makefile.in  chart.cpp  icons.cpp  icons.h
controlpanel/: icons.cpp  icons.h
demos/CVS/: Entries  Repository  Root
doc/: LSM-FOX  LSM-TEMPLATE  Makefile.am  Makefile.in  adie.html  app.html  calc.html  clipboard.html  consulting.html  datatarget.html  doc.html  download.html  doxygen.cfg  draganddrop.html  faq.html  filefuncs.html  focus.html  fonts.html  footer.html  foreword.html  fox.html  goals.html  guiupdate.html  home.html  icons.html  index.html  install.html  introduction.html  layout.html  license.html  menu.html  messages.html  news.html  news1.html  oldfox.html  pathfinder.html  platforms.html  projects.html  references.html  registry.html  (+9 more)
doc/CVS/: Entries  Repository
doc/art/: Makefile.am  Makefile.in
doc/screenshots/: Makefile.am  Makefile.in
include/: FX4Splitter.h  FXAccelTable.h  FXApp.h  FXArray.h  FXArrowButton.h  FXBMPIcon.h  FXBMPImage.h  FXBZStream.h  FXBitmap.h  FXBitmapFrame.h  FXBitmapView.h  FXButton.h  FXCURCursor.h  FXCanvas.h  FXCharset.h  FXCheckButton.h  FXColorBar.h  FXColorDialog.h  FXColorList.h  FXColorSelector.h  FXColorWell.h  FXColorWheel.h  FXComboBox.h  FXComposite.h  FXCursor.h  FXDC.h  FXDCPrint.h  FXDCWindow.h  FXDHVec.h  FXDLL.h  FXDVec.h  FXDataTarget.h  FXDebugTarget.h  FXDelegator.h  FXDial.h  FXDialogBox.h  FXDict.h  FXDirBox.h  FXDirDialog.h  FXDirItem.h  (+206 more)
include/CVS/: Entries  Repository
lib/: FXDirList.cpp  FXText.cpp  version.rc
lib/CVS/: Repository
pathfinder/: CopyDialog.cpp  CopyDialog.h  Makefile.am  Makefile.bc  Makefile.dmc  Makefile.in  Makefile.wc  PathFinder.cpp  PathFinder.h  Preferences.cpp  Preferences.h  PropertyDialog.cpp  PropertyDialog.h  depend  icons.cpp  icons.h
pathfinder/CVS/: Entries  Repository
shutterbug/: Makefile.am  Makefile.bc  Makefile.in  ShutterBug.cpp  ShutterBug.h  Snapper.cpp  Snapper.h  icons.cpp  icons.h  shutterbug.1
src/: .#FXApp.cc.1.75  FX4Splitter.cpp  FX7Segment.cpp  FXAccelTable.cpp  FXApp.cpp  FXArrowButton.cpp  FXBMPIcon.cpp  FXBMPImage.cpp  FXBZFileStream.cpp  FXBZStream.cpp  FXBitmap.cpp  FXBitmapFrame.cpp  FXBitmapView.cpp  FXButton.cpp  FXCURCursor.cpp  FXCanvas.cpp  FXCharset.cpp  FXCheckButton.cpp  FXChoiceBox.cpp  FXColorBar.cpp  FXColorDialog.cpp  FXColorNames.cpp  FXColorSelector.cpp  FXColorWell.cpp  FXColorWheel.cpp  FXComboBox.cpp  FXComposite.cpp  FXCursor.cpp  FXDC.cpp  FXDCPrint.cpp  FXDCWindow.cpp  FXDHMat.cpp  FXDHVec.cpp  FXDLL.cpp  FXDQuat.cpp  FXDVec.cpp  FXDataTarget.cpp  FXDebugTarget.cpp  FXDelegator.cpp  FXDial.cpp  (+282 more)
src/CVS/: Entries  Repository
tests/: ControlPanel.cpp  Makefile.am  Makefile.bc  Makefile.dmc  Makefile.icc  Makefile.in  Makefile.nt  Makefile.wc  bitmapviewer.cpp  button.cpp  datatarget.cpp  dctest.cpp  depend  dialog.cpp  dirlist.cpp  foursplit.cpp  gltest.cpp  glviewer.cpp  groupbox.cpp  header.cpp  hello.cpp  hello2.cpp  iconlist.cpp  image.cpp  imageviewer.cpp  layout.cpp  mditest.cpp  memmap.cpp  minheritance.cpp  rex.cpp  scribble.cpp  shutter.cpp  splitter.cpp  switcher.cpp  tabbook.cpp  table.cpp  test  test.cpp  textedit.cpp  window.cpp  (+1 more)
tests/CVS/: Entries  Repository
utils/: Makefile.am  Makefile.bc  Makefile.dmc  Makefile.icc  Makefile.in  Makefile.wc  clstab.cpp  depend  reswrap.1  reswrap.cpp  uuidgen.cpp
utils/CVS/: Entries  Repository
windows/: MSL  Makefile.am  Makefile.in  fox.spec.in
windows/CVS/: Entries  Repository
windows/borland/: Makefile
windows/borland/CVS/: Entries  Repository
windows/dmc/: Makefile
windows/dmc/CVS/: Entries  Repository
windows/vacpp/CVS/: Entries  Repository
windows/vcpp/: .cvsignore  win32.dsw
windows/vcpp/CVS/: Entries  Repository  Root
windows/vcpp/adie/: adie.dsp
windows/vcpp/bitmapviewer/: bitmapviewer.dsp
windows/vcpp/button/: .cvsignore  button.dsp
windows/vcpp/calculator/: calculator.dsp  gifs.list
windows/vcpp/chart/: chart.dsp
windows/vcpp/controlpanel/: controlpanel.dsp
windows/vcpp/datatarget/: .cvsignore  datatarget.dsp
windows/vcpp/dctest/: .cvsignore  dctest.dsp
windows/vcpp/dialog/: .cvsignore  dialog.dsp
windows/vcpp/dirlist/: .cvsignore  dirlist.dsp
windows/vcpp/foursplit/: .cvsignore  foursplit.dsp
windows/vcpp/fox/: .cvsignore  fox.dsp
windows/vcpp/foxdll/: .cvsignore  foxdll.dsp
windows/vcpp/gltest/: .cvsignore  gltest.dsp
windows/vcpp/glviewer/: .cvsignore  glviewer.dsp
windows/vcpp/groupbox/: .cvsignore  groupbox.dsp
windows/vcpp/header/: .cvsignore  header.dsp
windows/vcpp/hello/: .cvsignore  hello.dsp
windows/vcpp/hello2/: .cvsignore  hello2.dsp
windows/vcpp/iconlist/: .cvsignore  iconlist.dsp
windows/vcpp/image/: .cvsignore  image.dsp
windows/vcpp/imageviewer/: .cvsignore  imageviewer.dsp
windows/vcpp/layout/: layout.dsp
windows/vcpp/mditest/: .cvsignore  mditest.dsp
windows/vcpp/memmap/: memmap.dsp
windows/vcpp/minheritance/: minheritance.dsp
windows/vcpp/pathfinder/: .cvsignore  gifs.list  pathfinder.dsp
windows/vcpp/ratio/: ratio.dsp
windows/vcpp/reswrap/: .cvsignore  reswrap.dsp
windows/vcpp/scribble/: .cvsignore  scribble.dsp
windows/vcpp/shutter/: .cvsignore  shutter.dsp
(+72 files in other folders)
