## Process this file with automake to produce Makefile.in

htmldir = $(prefix)/@PACKAGE@/html

SUBDIRS 	= art screenshots


# Human-written HTML files
HTML_FILES = \
              adie.html \
              app.html \
              calc.html \
              datatarget.html \
              doc.html \
              download.html \
              draganddrop.html \
              faq.html \
              filefuncs.html \
              focus.html \
              fonts.html \
              foreword.html \
              fox.html \
              goals.html \
              guiupdate.html \
              icons.html \
              introduction.html \
              layout.html \
              messages.html \
              news.html \
              oldfox.html \
              pathfinder.html \
              projects.html \
              registry.html \
              rex.html \
              screenshots.html \
              serialization.html \
              styles.css \
              timers.html \
              widgets.html \
              window.html \
              xml.html \
              win32.html

# Icons
ICON_FILES = \
              art/bigpenguin.png \
              art/foxlogo.png \
              art/foxstart.png \
              art/freespeach.gif \
              art/ill.gif \
              art/ilr.gif \
              art/innernerd.gif \
              art/iul.gif \
              art/iur.gif \
              art/nerd_inside.gif \
              art/oll.gif \
              art/olr.gif \
              art/opengl_logo.png \
              art/oul.gif \
              art/oul_grey.gif \
              art/our.gif \
              art/progress.png \
              art/scribble.png \
              art/sgitextedit.png \
              art/slingerzbutton1.gif \
              art/win32-libraries.png \
              art/win32-linkoutput.png \
              art/win32-postbuild.png \
              art/win32-preprocessor.png \
              art/win32-project.png \
              art/win32-tooloptions.png \
              art/wintextedit.png \
              screenshots/adie_colors.jpg \
              screenshots/adie_del.jpg \
              screenshots/adie_edit.jpg \
              screenshots/adie_font.jpg \
              screenshots/adie.jpg \
              screenshots/adie_pat.jpg \
              screenshots/colordialog.png \
              screenshots/dirdialog.png \
              screenshots/filedialog.png \
              screenshots/fontdialog.png \
              screenshots/foxcalc.jpg \
              screenshots/foxcalc_prefdialog_01_small.jpg \
              screenshots/foxcalc_prefdialog_02_small.jpg \
              screenshots/foxcalc_prefdialog_03_small.jpg \
              screenshots/pathfinder.png \
              screenshots/printdialog.png \
              screenshots/replacedialog.png \
              screenshots/searchdialog.png


# Complete documentation package
#html_DATA = $(HTML_FILES) $(ICON_FILES)
html_DATA = $(HTML_FILES) 

EXTRA_DIST = $(html_DATA)


























