## Process this file with automake to produce Makefile.in


foxincludedir=$(includedir)/fox-1.4
foxinclude_HEADERS =   \
FX4Splitter.h \
FX7Segment.h \
FXAccelTable.h \
FXApp.h \
FXArray.h \
FXArrowButton.h \
FXBMPIcon.h \
FXBMPImage.h \
FXBitmap.h \
FXBitmapFrame.h \
FXBitmapView.h \
FXButton.h \
FXBZStream.h \
FXCURCursor.h \
FXCanvas.h \
FXCheckButton.h \
FXChoiceBox.h \
FXColorBar.h \
FXColorDialog.h \
FXColorSelector.h \
FXColorWell.h \
FXColorWheel.h \
FXComboBox.h \
FXComposite.h \
FXCursor.h \
FXDC.h \
FXDCPrint.h \
FXDCWindow.h \
FXDLL.h \
FXDataTarget.h \
FXDebugTarget.h \
FXDelegator.h \
FXDial.h \
FXDialogBox.h \
FXDict.h \
FXDirBox.h \
FXDirDialog.h \
FXDirList.h \
FXDirSelector.h \
FXDockBar.h \
FXDockHandler.h \
FXDockSite.h \
FXDockTitle.h \
FXDocument.h \
FXDragCorner.h \
FXDrawable.h \
FXDriveBox.h \
FXElement.h \
FXException.h \
FXFile.h \
FXFileDialog.h \
FXFileDict.h \
FXFileList.h \
FXFileSelector.h \
FXFileStream.h \
FXFoldingList.h \
FXFont.h \
FXFontDialog.h \
FXFontSelector.h \
FXFrame.h \
FXGIFCursor.h \
FXGIFIcon.h \
FXGIFImage.h \
FXGLCanvas.h \
FXGLCone.h \
FXGLContext.h \
FXGLCube.h \
FXGLCylinder.h \
FXGLObject.h \
FXGLShape.h \
FXGLSphere.h \
FXGLTriangleMesh.h \
FXGLViewer.h \
FXGLVisual.h \
FXGroupBox.h \
FXGradientBar.h \
FXGUISignal.h \
FXGZStream.h \
FXHash.h \
FXHeader.h \
FXHorizontalFrame.h \
FXICOIcon.h \
FXICOImage.h \
FXIFFImage.h \
FXIFFIcon.h \
FXIcon.h \
FXIconDict.h \
FXIconList.h \
FXIconSource.h \
FXId.h \
FXImage.h \
FXImageFrame.h \
FXImageView.h \
FXInputDialog.h \
FXJPGIcon.h \
FXJPGImage.h \
FXLabel.h \
FXList.h \
FXListBox.h \
FXMDIButton.h \
FXMDIChild.h \
FXMDIClient.h \
FXMainWindow.h \
FXMat3d.h \
FXMat4d.h \
FXMat3f.h \
FXMat4f.h \
FXMatrix.h \
FXMemoryStream.h \
FXMemMap.h \
FXMenuBar.h \
FXMenuButton.h \
FXMenuCaption.h \
FXMenuCascade.h \
FXMenuCheck.h \
FXMenuRadio.h \
FXMenuCommand.h \
FXMenuPane.h \
FXMenuSeparator.h \
FXMenuTitle.h \
FXMessageBox.h \
FXObject.h \
FXObjectList.h \
FXOptionMenu.h \
FXPCXIcon.h \
FXPCXImage.h \
FXPNGIcon.h \
FXPNGImage.h \
FXPPMIcon.h \
FXPPMImage.h \
FXPacker.h \
FXPicker.h \
FXPoint.h \
FXPopup.h \
FXPrintDialog.h \
FXProgressBar.h \
FXProgressDialog.h \
FXQuatd.h \
FXQuatf.h \
FXRASIcon.h \
FXRASImage.h \
FXRGBIcon.h \
FXRGBImage.h \
FXRadioButton.h \
FXRangef.h \
FXRanged.h \
FXRealSlider.h \
FXRealSpinner.h \
FXRecentFiles.h \
FXRectangle.h \
FXRegion.h \
FXRegistry.h \
FXReplaceDialog.h \
FXRex.h \
FXRootWindow.h \
FXRuler.h \
FXScrollArea.h \
FXScrollBar.h \
FXScrollPane.h \
FXScrollWindow.h \
FXSearchDialog.h \
FXSeparator.h \
FXSettings.h \
FXShell.h \
FXShutter.h \
FXSize.h \
FXSlider.h \
FXSpinner.h \
FXSpheref.h \
FXSphered.h \
FXSplashWindow.h \
FXSplitter.h \
FXSpring.h \
FXStatusBar.h \
FXStatusLine.h \
FXStream.h \
FXString.h \
FXStringDict.h \
FXSwitcher.h \
FXTGAIcon.h \
FXTGAImage.h \
FXTIFIcon.h \
FXTIFImage.h \
FXTabBar.h \
FXTabBook.h \
FXTabItem.h \
FXTable.h \
FXText.h \
FXTextCodec.h \
FXTextField.h \
FXThread.h \
FXToggleButton.h \
FXToolBar.h \
FXToolBarGrip.h \
FXToolBarShell.h \
FXToolBarTab.h \
FXToolTip.h \
FXTopWindow.h \
FXTreeList.h \
FXTreeListBox.h \
FXTriStateButton.h \
FXUndoList.h \
FXURL.h \
FXUTF16Codec.h \
FXUTF32Codec.h \
FXUTF8Codec.h \
FXVec2d.h \
FXVec2f.h \
FXVec3d.h \
FXVec3f.h \
FXVec4d.h \
FXVec4f.h \
FXVerticalFrame.h \
FXVisual.h \
FXWindow.h \
FXWizard.h \
FXXBMIcon.h \
FXXBMImage.h \
FXXPMIcon.h \
FXXPMImage.h \
fx.h \
fx3d.h \
fxdefs.h \
fxkeys.h \
fxver.h \
xincs.h
