## Process this file with automake to produce Makefile.in

CXXFLAGS = @CXXFLAGS@ @X_CFLAGS@

bin_PROGRAMS	= reswrap

man_MANS        = reswrap.1

reswrap_SOURCES	= reswrap.cpp

EXTRA_DIST      = $(man_MANS) \
                  maketree \
                  Makefile.bc \
                  Makefile.icc \
                  Makefile.wc \
                  Makefile.dmc
