## Process this file with automake to produce Makefile.in

artdir = $(prefix)/@PACKAGE@/html/art

ART_FILES = \
	bigpenguin.png \
	foxlogo.png \
	foxstart.png \
	freespeach.gif \
	ill.gif \
	ilr.gif \
	innernerd.gif \
	iul.gif \
	iur.gif \
	nerd_inside.gif \
	oll.gif \
	olr.gif \
	opengl_logo.png \
	oul.gif \
	oul_grey.gif \
	our.gif \
	progress.png \
	scribble.png \
	sgitextedit.png \
	slingerzbutton1.gif \
	win32-libraries.png \
	win32-linkoutput.png \
	win32-postbuild.png \
	win32-preprocessor.png \
	win32-project.png \
	win32-tooloptions.png \
	wintextedit.png


art_DATA = $(ART_FILES) 

EXTRA_DIST = $(art_DATA)


























