## Process this file with automake to produce Makefile.in

screenshotsdir = $(prefix)/@PACKAGE@/html/screenshots

# Icons
SCREENSHOTS_FILES = \
              adie_colors.jpg \
              adie_del.jpg \
              adie_edit.jpg \
              adie_font.jpg \
              adie.jpg \
              adie_pat.jpg \
              colordialog.png \
              dirdialog.png \
              filedialog.png \
              fontdialog.png \
              foxcalc.jpg \
              foxcalc_prefdialog_01_small.jpg \
              foxcalc_prefdialog_02_small.jpg \
              foxcalc_prefdialog_03_small.jpg \
              glview.png \
              pathfinder.png \
              printdialog.png \
              replacedialog.png \
              searchdialog.png \
              table.png


screenshots_DATA = $(SCREENSHOTS_FILES)

EXTRA_DIST = $(screenshots_DATA)


























